--- a/src/View/Application/form/other/SalonesPantalla.form
+++ b/src/View/Application/form/other/SalonesPantalla.form
@@ -43,7 +43,8 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="lb">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de Tipos de C&#xf3;digos Disciplinarios"/>
+        <Property name="text" type="java.lang.String" value="Gesti&#xf3;n de los Salones"/>
+        <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
